--- a/styles.css
+++ b/styles.css
@@ -72,7 +72,6 @@ button {
     cursor: pointer;
     transition: background-color 0.3s ease;
     font-weight: bold;
-    margin-top: 20px;
     margin-left: 10px;
 }
 
@@ -127,6 +126,13 @@ select {
     max-height: none; /* Allow it to expand infinitely */
     overflow-y: auto; /* Optional: Add scrolling if needed */
 }
+
+.group{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 h2{
     text-shadow: 1px 1px 3px black;
 }
@@ -165,7 +171,6 @@ h2{
     border-radius: 5px;
     border: 1px solid #ccc;
     font-size: 16px;
-    margin-bottom: 10px;
 }
 
 ul {
